# aura-grid

./: .env.example  .gitignore  LICENSE  README.md  dashboard.html  requirements.txt  server.py  start_aura_grid.bat  test_aura_grid.py  worker.py
api/: package.json
api/src/: index.ts
core/: Cargo.toml  pyproject.toml
core/src/: lib.rs
