[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aura_core"
version = "0.1.0"
description = "High-performance Rust scanner for DeFi vulnerabilities"
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "aura_core"
